tests-integration/fixtures/checking/218_ado_monad_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
pure :: forall (a :: Type). (a :: Type) -> Effect (a :: Type)
affPure :: forall (a :: Type). (a :: Type) -> Aff (a :: Type)
map ::
  forall (a :: Type) (b :: Type).
    ((a :: Type) -> (b :: Type)) -> Effect (a :: Type) -> Effect (b :: Type)
apply ::
  forall (a :: Type) (b :: Type).
    Effect ((a :: Type) -> (b :: Type)) -> Effect (a :: Type) -> Effect (b :: Type)
test :: Effect { a :: Int, b :: String, c :: Int }
test' :: forall (t30 :: Type). Effect { a :: Int, b :: (t30 :: Type), c :: Int }

Types
Effect :: Type -> Type
Aff :: Type -> Type

Roles
Effect = [Nominal]
Aff = [Nominal]

Diagnostics
error[CannotUnify]: Cannot unify 'Aff' with 'Effect'
  --> 15:8..15:22
   |
15 |   b <- affPure "life"
   |        ^~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Aff String' with 'Effect ?15[:0]'
  --> 15:8..15:22
   |
15 |   b <- affPure "life"
   |        ^~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Aff' with 'Effect'
  --> 21:8..21:22
   |
21 |   b <- affPure "life"
   |        ^~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Aff String' with 'Effect ?30[:0]'
  --> 21:8..21:22
   |
21 |   b <- affPure "life"
   |        ^~~~~~~~~~~~~~
